--- a/ClassForge.Test/ClassForge.Test.csproj
+++ b/ClassForge.Test/ClassForge.Test.csproj
@@ -56,6 +56,7 @@
     <Content Include="files\config.cpp">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="files\macros.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ClassForge\ClassForge.csproj">
