--- a/ClassForge/ClassForge.csproj
+++ b/ClassForge/ClassForge.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Model\Property.cs" />
     <Compile Include="ParserRules.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="XmlParser.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
