--- a/ClassForge.Test/ClassForge.Test.csproj
+++ b/ClassForge.Test/ClassForge.Test.csproj
@@ -59,6 +59,12 @@
     <Content Include="files\macros.hpp">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="files\mergetest\addon1\config.cpp">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="files\mergetest\addon2\config.cpp">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ClassForge\ClassForge.csproj">
